core/unpackaged/main/default/objects/ZVC__Country_Phone_Code__c/ZVC__Country_Phone_Code__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Country Phone Code</label>
</CustomObject>