core/unpackaged/main/default/objects/ZVC__Country_Phone_Code__c/fields/ZVC__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>