core/unpackaged/main/default/objects/ZVC__Country_Phone_Code__c/fields/ZVC__Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>