core/unpackaged/main/default/objects/ZVC__Country_Phone_Code__c/listViews/ZVC__All_View.listView-meta.xml
<ListView>
    <fullName>ZVC__All_View</fullName>
    <columns>NAME</columns>
    <columns>ZVC__Country_Code__c</columns>
    <columns>ZVC__Phone_Area_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
</ListView>